--- a/index.html
+++ b/index.html
@@ -189,34 +189,34 @@
             <h3>info</h3>
             <p>thiis is a perfect place to find a nice and cozy spot to sip som. you find the java jungle</p>
             <ul>
-              <li>address: el hoda agadir city</li>
-              <li>email: mohmed.job@gmail.com</li>
-              <li>phone: (+212) 0612345678</li>
+              <li><i class="fa-solid fa-location-arrow"></i>address: el hoda agadir city</li>
+              <li><i class="fa-regular fa-envelope"></i>email: mohmed.job@gmail.com</li>
+              <li><i class="fa-solid fa-phone"></i>phone: (+212) 0612345678</li>
             </ul>
           </div>
           <div class="quic links">
             <h3>Quic link</h3>
             <ul>
-              <li ><a href="#Home">Home</a></li>
-              <li ><a href="#About">About</a></li>
-              <li ><a href="#Menu">Menu</a></li>
-              <li ><a href="#Contact">Contact</a></li>
+              <li ><a href="#Home"><i class="fa-solid fa-house"></i>Home</a></li>
+              <li ><a href="#About"><i class="fa-regular fa-address-card"></i>About</a></li>
+              <li ><a href="#Menu"><i class="fa-solid fa-clipboard-list"></i>Menu</a></li>
+              <li ><a href="#Contact"><i class="fa-solid fa-file-signature"></i>Contact</a></li>
               
             </ul>
           </div>
            <div class="follow as">
             <h3>follow us on</h3>
             <ul>
-              <li>face book</li>
-              <li>instagram</li>
-              <li>whatsapp</li>
-              <li>you tube</li>
+              <li><i class="fa-brands fa-square-facebook"></i>face book</li>
+              <li><i class="fa-brands fa-square-instagram"></i>instagram</li>
+              <li><i class="fa-brands fa-square-whatsapp"></i>whatsapp</li>
+              <li><i class="fa-brands fa-square-youtube"></i>you tube</li>
             </ul>
            </div>
         </div>
     </div>
         <div class="auther">
-         <p>&copy; all right reserve || made by : <span>Jamal Yasyn</span></p> 
+         <p>&copy; all right reserve || made by : <span>Jamal Yasyn<i class="fa-solid fa-face-smile-wink"></i></span></p> 
         </div>
   </footer>
 
