--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="content-text">
                   <h2><span class="text-styl">COFFE ARGANA</span> info</h2>
                   <p class="para-style">مكان يحمل اسمه من صفائه ودفئه. مقهى صغير بطابع هادئ، يجمع بين البساطة والأناقة، وتفوح فيه رائحة البن الطازج. الزبائن يأتون ليس فقط لتناول القهوة، بل للراحة، والقراءة، أو حتى للعمل في أجواء مريحة. الإضاءة ناعمة، والموسيقى خفيفة، والخدمة ودودة. قهوة جميلة ليست مجرد مقهى، بل ملاذ لكل من يبحث عن لحظة هدوء في يوم مزدحم.</p>
-                  <p><span>عندما تشرب قهوتنا تحس ب:</span> دفء وسط زحام الحياة، رائحتها تأسر الحواس، ومذاقها يروي الروح قبل أن ينعش الجسد. في فنجان صغير قد تجد سكونًا، وذكرى، وحكاية تنتظر أن تُروى. هي ليست مجرد مشروب، بل طقس من طقوس الراحة والصفاء</p>
+                  <p><span>عندما تشرب قهوتنا تشعر ب:</span> دفء وسط زحام الحياة، رائحتها تأسر الحواس، ومذاقها يروي الروح قبل أن ينعش الجسد. في فنجان صغير قد تجد سكونًا، وذكرى، وحكاية تنتظر أن تُروى. هي ليست مجرد مشروب، بل طقس من طقوس الراحة والصفاء</p>
                 </div>
             </div>
         </div>
